[project]
name = "fhan"
version = "0.1.9"
description = "Add your description here"
authors = [{ name = "Till Rostalski", email = "tillrostalski@gmail.com" }]
dependencies = [
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "click>=8.1.7",
    "stringcase>=1.2.0",
    "fhirpathpy>=0.2.2",
    "pandas>=2.0.3",
    "python-dotenv>=1.0.0",
    "flake8>=5.0.4",
    "cachetools>=5.3.1",
    "dacite>=1.8.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.10.0",
    "mkdocs-material>=9.4.2",
    "mkdocstrings>=0.23.0",
    "jupyter>=1.0.0",
    "pytest>=7.4.3",
    "requests_mock>=1.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
my-client = "fhan.cli:main"
