[project]
name = "fhan"
version = "0.1.13"
description = "Add your description here"
authors = [{ name = "Till Rostalski", email = "tillrostalski@gmail.com" }]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fhirmodels>=0.1.3",
    "cachetools>=5.3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flake8>=5.0.4",
    "black>=23.10.0",
    "jinja2>=3.1.2",
    "mkdocs-material>=9.4.2",
    "mkdocstrings>=0.23.0",
    "jupyter>=1.0.0",
    "pytest>=7.4.3",
    "requests_mock>=1.11.0",
    "ruffus>=2.8.0",
    "isort>=5.10.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
my-client = "fhan.cli:main"
