[project]
name = "fhan"
version = "0.1.15"
description = "Add your description here"
authors = [{ name = "Till Rostalski", email = "tillrostalski@gmail.com" }]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fhirmodels>=0.1.3",
    "structlog>=22.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.4",
]

[project.scripts]
my-client = "fhan.cli:main"
